Fixing spacing issue within company name and position title

--- a/src/components/ui/Experience/Experience.css
+++ b/src/components/ui/Experience/Experience.css
@@ -16,6 +16,9 @@ span.date{
 }
 .company-position{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 8px;
 }
 p.dates{
     display: flex;
